--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,19 @@ section {
 
 .home-img img{
     width: 35vw;
+    border-radius: 20%;
+    transition: .5s ease;
+}
+.home-img {
+    transition: .5s ease;
+}
+.home-img:hover{
+    transform: scale(0.9);
+}
+.home-img img:hover {
+    border-radius: 30%;
+    box-shadow: 0 0 1rem var(--main-color);
+    transform: scale(1.1);
 }
 
 .home-content h3{
@@ -108,4 +121,11 @@ section {
     font-size: 2rem;
     color: var(--main-color);
     margin: 3rem 1.5rem 3rem 0;
+    transition: .5s ease;
+}
+
+.social-media a:hover{
+    background: var(--main-color);
+    color: var(--second-bg-color);
+    box-shadow: 0 0 1rem var(--main-color);
 }
