--- a/css/style.css
+++ b/css/style.css
@@ -89,14 +89,22 @@ section {
     transform: scale(0.9);
 }
 .home-img img:hover {
-    border-radius: 30%;
-    box-shadow: 0 0 1rem var(--main-color);
+    /* border-radius: 30%; */
+    /* box-shadow: 0 0 1rem var(--main-color); */
     transform: scale(1.1);
 }
 
 .home-content h3{
     font-size: 3.2rem;
     font-weight: 700;
+}
+
+.home-content h3:nth-of-type(2) {
+    margin-bottom: 2rem;
+}
+
+span {
+    color: var(--main-color);
 }
 
 .home-content h1 {
@@ -128,4 +136,21 @@ section {
     background: var(--main-color);
     color: var(--second-bg-color);
     box-shadow: 0 0 1rem var(--main-color);
+}
+
+.btn {
+    display: inline-block;
+    padding: 1rem 2.8rem;
+    background: var(--main-color);
+    border-radius: 4rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 1.6rem;
+    color: var(--second-bg-color);
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: .5s ease;
+}
+
+.btn:hover {
+    box-shadow: none;
 }
