--- a/css/style.css
+++ b/css/style.css
@@ -154,3 +154,16 @@ span {
 .btn:hover {
     box-shadow: none;
 }
+
+.about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    background: var(--second-bg-color);
+}
+
+.about-img img {
+    width: 100%;
+    height: 60%;
+}
