eding some changes

--- a/css/style.css
+++ b/css/style.css
@@ -396,6 +396,9 @@ span {
         padding: 10rem 3% 2rem;
     }
 
+    .services {
+        padding-bottom: 7rem;
+    }
     .footer {
         padding: 2rem 3%;
     }
@@ -443,5 +446,15 @@ span {
     .home-img img {
         width: 70vw;
         margin-top: 4rem;
+    }
+    .about {
+        flex-direction: column-reverse;
+    }
+    .about img {
+        width: 70vw;
+        margin-top: 4rem;
+    }
+    .services h2 {
+        margin-bottom: 3rem;
     }
 }
