--- a/css/style.css
+++ b/css/style.css
@@ -84,16 +84,19 @@ section {
 .home-img img{
     width: 35vw;
     border-radius: 20%;
-    transition: .5s ease;
-}
-.home-img {
-    transition: .5s ease;
+    animation: floatImage 4s ease-in-out infinite;
 }
 
-.home-img img:hover {
-    /* border-radius: 30%; */
-    /* box-shadow: 0 0 1rem var(--main-color); */
-    transform: scale(1.02);
+@keyframes floatImage {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-2.4rem);
+    }
+    100% {
+        transform: translateY(0);
+    }
 }
 
 .home-content h3{
